@@ -42,4 +42,4 @@ Disassembly of section .text:
 0+05e <[^>]*> 82 4f 00 00 	mov	r15,	&0x0000	;
 0+062 <[^>]*> 3f 40 f0 00 	mov	#240,	r15	;#0x00f0
 0+066 <[^>]*> 30 40 00 00 	br	#0x0000		;
-
+0+06a <[^>]*> 92 52 00 02 72 01 	add	&0x0200,&0x0172	;0x0200
