@@ -52,3 +52,6 @@ main:
 	.comm c,4,2
 	.comm d,4,2
 
+	;; This next instruction triggered a bug which
+	;; was fixed by a patch to msp430-dis.c on Jan 2, 2004
+	add	&0x200, &0x172
